--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,16 @@ section {
 
 section>h2 {
     float: right;
-    border-bottom: 5px solid black;
-    border-left: 5px solid black;
-    margin: 0;*/
-    width: 230px;*/
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    margin: 0;
+    width: 230px;
     text-align: center;
     font-style: Times;
     font-size: 24px;
     font-weight: bold;
     height: 45px;
-    padding-top: 10px;*/
+    padding-top: 10px;
 }
 
 section.lebesgue>h2 {
